// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KPICard should format large values 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c4 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c7 {
  text-align: center;
}

.c0 {
  padding: 1.2em;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      10,000,000,000
    </div>
    <span
      className="c3 c4"
    >
      <span
        className="c5"
      >
        +
        30%
        <div
          className="c6 c7 lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c4 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c7 {
  text-align: center;
}

.c0 {
  padding: 1.2em;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
    <span
      className="c3 c4"
    >
      <span
        className="c5"
      >
        +
        30%
        <div
          className="c6 c7 lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render card without the percentage 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
  </div>
</div>
`;

exports[`KPICard should render currency with USD 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c4 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c7 {
  text-align: center;
}

.c0 {
  padding: 1.2em;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  USD
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      $3,789.00
    </div>
    <span
      className="c3 c4"
    >
      <span
        className="c5"
      >
        
        0%
        <div
          className="c6 c7 lni lni-minus"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render currency with USD and without percentage 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  USD
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      $3,789.00
    </div>
  </div>
</div>
`;

exports[`KPICard should render currency with euro 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c4 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c7 {
  text-align: center;
}

.c0 {
  padding: 1.2em;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Euro
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      €3,789.00
    </div>
    <span
      className="c3 c4"
    >
      <span
        className="c5"
      >
        
        0%
        <div
          className="c6 c7 lni lni-minus"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render currency with euro and without percentage 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  Euro
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      €3,789.00
    </div>
  </div>
</div>
`;

exports[`KPICard should render green 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c4 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c7 {
  text-align: center;
}

.c0 {
  padding: 1.2em;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
    <span
      className="c3 c4"
    >
      <span
        className="c5"
      >
        +
        30%
        <div
          className="c6 c7 lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render green card without the percentage 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
  </div>
</div>
`;

exports[`KPICard should render negative growth 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c4 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c7 {
  text-align: center;
}

.c0 {
  padding: 1.2em;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
    <span
      className="c3 c4"
    >
      <span
        className="c5"
      >
        
        -30%
        <div
          className="c6 c7 lni lni-chevron-down"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render negative growth without percentage 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
  </div>
</div>
`;

exports[`KPICard should render positive growth 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c4 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c7 {
  text-align: center;
}

.c0 {
  padding: 1.2em;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
    <span
      className="c3 c4"
    >
      <span
        className="c5"
      >
        +
        30%
        <div
          className="c6 c7 lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render positive growth without percentage 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
  </div>
</div>
`;

exports[`KPICard should render red 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c4 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c7 {
  text-align: center;
}

.c0 {
  padding: 1.2em;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
    <span
      className="c3 c4"
    >
      <span
        className="c5"
      >
        +
        30%
        <div
          className="c6 c7 lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render red card without the percentage 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
  </div>
</div>
`;

exports[`KPICard should render two decimal points in growth 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c4 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c7 {
  text-align: center;
}

.c0 {
  padding: 1.2em;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
    <span
      className="c3 c4"
    >
      <span
        className="c5"
      >
        +
        33.33%
        <div
          className="c6 c7 lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render zero growth 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c4 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  text-align: center;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c7 {
  text-align: center;
}

.c0 {
  padding: 1.2em;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-size: 1rem;
  margin-left: 0.3rem;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
    <span
      className="c3 c4"
    >
      <span
        className="c5"
      >
        
        0%
        <div
          className="c6 c7 lni lni-minus"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render zero growth without percentage 1`] = `
.c2 {
  height: 100%;
  min-width: 0;
  grid-column-end: span 1;
  grid-row-end: span 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-self: stretch;
}

.c1 {
  display: grid;
  height: auto;
  grid-auto-flow: row;
  grid-auto-rows: minmax(20px,auto);
  grid-template-columns: repeat(2,1fr);
  grid-gap: 8px;
}

.c0 {
  padding: 1.2em;
}

<div
  className="c0"
>
  Title
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      1
    </div>
  </div>
</div>
`;
